--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Документ HTML5</title>
+        <meta http-equiv="Content-Type" content="text/html"/>
+        <link href="g2.css" rel="stylesheet" type="text/css"/>
+        <title>geology-2</title>
     </head>
     <body>
-        <div>Содержание документа HTML5</div>
+        <div></div>
     </body>
 </html>
