--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8"/>
         <title>Документ HTML5</title>
         <meta http-equiv="Content-Type" content="text/html"/>
         <link href="g2.css" rel="stylesheet" type="text/css"/>
