--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html"/>
 	<meta charset="utf-8"/>
 	<link href="g2.css" rel="stylesheet" type="text/css"/>
-	<title>Казаков</title>
+	<title>geology-2</title>
 </head>
     <body>
         <div>
