--- a/s1.html
+++ b/s1.html
@@ -4,91 +4,49 @@
 	<head>
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
-		<title>Сердце</title>
+		<title>магматические породы</title>
 	</head>
 	
 	<body>
 		<header>
-			<a id="a_1" href="index.html">назад</a><h1>Сердце</h1>
+			<a id="a_1" href="index.html">назад</a><h1>магматические горные породы</h1>
 		</header>
 		
-		<div id="d1">
+		<div id="d2">
 		
-			<article>
-				<h3>Содержание</h3>
-			<ol>
-				<a href="#a1"><li>Введение</li></a>
-				<a href="#a2"><li>Внешнее строение сердца</li></a>
-				<a href="#a3"><li>Строение тканей сердца</li></a>
-				<a href="#a4"><li>Анатомия предсердий и желудочков</li></a>
-			</ol>
-			
-			<a name="a1"><h3>Введение</h3></a>
-			
-			<p>Сердце человека — это конусообразный полый мышечный орган, в который поступает кровь из впадающих в него венозных стволов и перекачивающий её в артерии, которые примыкают к сердцу. Полость сердца разделена на два предсердия и два желудочка. Левое предсердие и левый желудочек в совокупности образуют «артериальное сердце», названное так по типу проходящей через него крови, правый желудочек и правое предсердие объединяются в «венозное сердце», названное по тому же принципу. Сокращение сердца называется систола, а расслабление — диастола.</p>
-			<p>Форма сердца не одинакова у разных людей. Она определяется возрастом, полом, телосложением, здоровьем и другими факторами. В упрощенных моделях описывается сферой, эллипсоидами, фигурами пересечения эллиптического параболоида и трёхосного эллипсоида. Мера вытянутости (фактор) формы есть отношение наибольших продольного и поперечного линейных размеров сердца. При гиперстеническом типе телосложения отношение близко к единице и астеническом — порядка 1,5. Длина сердца взрослого человека колеблется от 10 до 15 см (чаще 12—13 см), ширина в основании 8—11 см (чаще 9—10 см) и переднезадний размер 6—8,5 см (чаще 6,5—7 см). Масса сердца в среднем составляет у мужчин 332 г (от 274 до 385 г), у женщин — 253 г (от 203 до 302 г)</p>
-			
-			<a name="a2"><h3>Внешнее строение сердца</h3></a>
-			
-			<p>Анатомическое строение и функции сердца достаточно сложны. Оно состоит из камер, каждая из которых имеет свои особенности. Внешнее строение сердца следующее:</p>
-			
-			<ul>
-				<li>apex (верхушка);</li>
-				<li>basis (основание);</li>
-				<li>поверхность передняя, или грудино-реберная;</li>
-				<li>поверхность нижняя, или диафрагмальная;</li>
-				<li>правый край;</li>
-				<li>левый край.</li>
-			</ul>
-			
-			<p>Верхушка – это суженная закругленная часть сердца, полностью образованная левым желудочком. Она обращена вперед вниз и влево, упирается в пятое межреберное пространство левее средней линии на 9 см.</p>
-			<p>Основание сердца – это верхняя расширенная часть сердца. Оно обращено вверх, вправо, назад и имеет вид четырехугольника. Его образуют предсердия и аорта с легочным стволом, находящиеся спереди. В верхнем правом углу четырехугольника вход вены верхней полой, в нижнем углу – нижней полой, правее входят две правые легочные вены, на левой стороне основания – две левые легочные.</p>
-			<p>Между желудочками и предсердиями проходит венечная борозда. Выше нее находятся предсердия, ниже – желудочки. Спереди в области венечной борозды из желудочков выходит аорта и легочный ствол. Также в ней расположен венечный синус, куда из вен сердца поступает венозная кровь.</p>
-			<p>Грудино-реберная поверхность сердца более выпуклая. Она находится за грудиной и хрящами III-VI ребер и направлена вперед, вверх, влево. По ней проходит поперечная венечная борозда, которая отделяет желудочки от предсердий и тем самым делит сердце на верхнюю часть, образуемую предсердиями, и нижнюю, состоящую из желудочков. Другая борозда грудино-реберной поверхности – передняя продольная – идет по границе между правым и левым желудочками, при этом правый образует большую часть передней поверхности, левый – меньшую.</p>
-			<p>Диафрагмальная поверхность более плоская и прилегает к сухожильному центру диафрагмы. По этой поверхности проходит продольная задняя борозда, отделяющая поверхность левого желудочка от поверхности правого. При этом левый составляет большую часть поверхности, а правый – меньшую.</p>
-			<p>Передняя и задняя продольные борозды сливаются нижними концами и образуют справа от сердечной верхушки сердечную вырезку.</p>
-			<p>Различают еще боковые поверхности, находящиеся справа и слева и обращенные к легким, в связи с чем они получили название легочных.</p>
-			<p>Правый и левый края сердца неодинаковы. Правый край более заострен, левый более тупой и закругленный из-за более толстой стенки левого желудочка.</p>
-			<p>Границы между четырьмя камерами сердца не всегда отчетливо выражены. Ориентирами считаются борозды, в которых находятся кровеносные сосуды сердца, покрытые жировой клетчаткой и наружным слоем сердца – эпикардом. Направление этих борозд зависит от того, как расположено сердце (косо, вертикально, поперечно), что определяется типом телосложения и высотой нахождения диафрагмы. У мезоморфов (нормостеников), чьи пропорции близки к усредненным, оно расположено косо, у долихоморфов (астеников), имеющих худощавое телосложение, – вертикально, у брахиморфов (гиперстеников) с широкими короткими формами – поперечно.</p>
-			<p>Сердце как будто подвешено за основание на крупные сосуды, при этом основание остается неподвижным, а верхушка находится в свободном состоянии и может смещаться.</p>
-			
-			<a name="a3"><h3>Строение тканей сердца</h3></a>
-			
-			<p>Стенку сердца составляют три слоя:</p>
-			
-			<ol>
-				<li>Эндокард – внутренний слой эпителиальной ткани, выстилающий полости сердечных камер изнутри, точно повторяя их рельеф.</li>
-				<li>Миокард – толстый слой, образованный мышечной тканью (поперечно-полосатой). Сердечные миоциты, из которых он состоит, соединены множеством перемычек, связывающих их в мышечные комплексы. Этот мышечный слой обеспечивает ритмичное сокращение камер сердца. Наименьшая толщина миокарда у предсердий, наибольшая – у левого желудочка (примерно в 3 раза толще, чем у правого), поскольку ему нужно больше силы, чтобы вытолкнуть кровь в большой круг кровообращения, в котором сопротивление потоку в несколько раз больше, чем в малом. Миокард предсердий состоит из двух слоев, миокард желудочков – из трех. Миокард предсердий и миокард желудочков разделены фиброзными кольцами. Проводящая система, обеспечивающая ритмичное сокращение миокарда, одна для желудочков и предсердий.</li>
-				<li>Эпикард – наружный слой, являющийся висцеральным лепестком сердечной сумки (перикарда), представляющей собой серозную оболочку. Он покрывает не только сердце, но и начальные отделы легочного ствола и аорты, а также конечные отделы легочных и полых вен.</li>
-			</ol>
-			
-			
-			<a name="a4"><h3>Анатомия предсердий и желудочков</h3></a>
-			
-			<p>Сердечная полость разделена перегородкой на две части – правую и левую, которые между собой не сообщаются. Каждая их этих частей состоит из двух камер – желудочка и предсердия. Перегородка между предсердиями называется межпредсердной, между желудочками – межжелудочковая. Таким образом, сердце состоит из четырех камер – двух предсердий и двух желудочков.</p>
-			
-			<center><h4>Правое предсердие</h4></center>
-			
-			<p>По форме оно похоже на неправильный куб, впереди есть дополнительная полость, называемая правым ушком. Предсердие имеет объем от 100 до 180 куб. см. В нем пять стенок, толщиной от 2 до 3 мм: передняя, задняя, верхняя, латеральная, медиальная. В правое предсердие впадает верхняя полая вена (сверху сзади) и нижняя полая вена (снизу). Справа снизу находится венечный синус, куда стекает кровь всех сердечных вен. Между отверстиями верхней и нижней полых вен находится межвенозный бугорок. В том месте, где в правое предсердие впадает нижняя полая вена, расположена складка внутреннего слоя сердца – заслонка этой вены. Синусом полых вен называют задний расширенный отдел правого предсердия, куда впадают обе эти вены. Камера правого предсердия имеет гладкую внутреннюю поверхность, и только в правом ушке с прилегающей к нему передней стенкой поверхность неровная. В правое предсердие открывается множество точечных отверстий малых вен сердца.<p>
-			
-			<center><h4>Правый желудочек</h4></center>
-			
-			<p>Он состоит из полости и артериального конуса, который представляет собой воронку, направленную вверх. Правый желудочек имеет форму трехгранной пирамиды, основание которой обращено вверх, а верхушка – вниз. У правого желудочка – три стенки: передняя, задняя, медиальная. Передняя – выпуклая, задняя – более плоская. Медиальная является межжелудочковой перегородкой, состоящей из двух частей. Большая из них – мышечная – находится внизу, меньшая – перепончатая – вверху. Пирамида обращена основанием к предсердию и в нем есть два отверстия: заднее и переднее. Первое – между полостью правого предсердия и желудочка. Второе выходит в легочный ствол.</p>
-			
-			<center><h4>Левое предсердие</h4></center>
-			
-			<p>Оно имеет вид неправильного куба, находится сзади и прилегает к пищеводу и нисходящей части аорты. Его объем – 100-130 куб. см, толщина стенок – от 2 до 3 мм. Как и правое предсердие, имеет пять стенок: переднюю, заднюю, верхнюю, литеральную, медиальную. Левое предсердие продолжается кпереди в добавочную полость, называемую левым ушком, которое направлено к легочному стволу. В предсердие впадают четыре легочные вены (сзади и сверху), в отверстиях которых отсутствуют клапаны. Медиальная стенка является межпредсердной перегородкой. Внутренняя поверхность предсердия гладкая, гребенчатые мышцы – только в левом ушке, которое длиннее и уже правого, и заметно отделено от желудочка перехватом. С левым желудочком сообщается с помощью предсердно-желудочкового отверстия.</p>
-			
-			<center><h4>Левый желудочек</h4></center>
-			
-			<p>По форме он напоминает конус, основание которого обращено вверх. Стенки этой камеры сердца (передняя, задняя, медиальная) имеют наибольшую толщину – от 10 до 15 мм. Между передней и задней четкая граница отсутствует. В основании конуса – отверстие аорты и левое предсердно-желудочковое.</p>
-			<p>Круглое по форме отверстие аорты находится спереди. Его клапан состоит из трех заслонок.</p>
-			
-			</article>
+		<center><img class="i1" src="лабрадорит.jpg"/><center>
+		<div class="desc">
+		<h1>Лабрадорит</h1>
+		<ol>
+		<li><p>цвет:</p></li>
+		<li><p>структура:</p></li>
+		<li><p>текстура:</p></li>
+		<li><p>состав:</p></li>
+		<li><p>плотность:</p></li>
+		<li><p>особые свойства:</p></li>
+		<li><p>происхождение:</p></li>
+		<li><p>применение:</p></li>
+		</div>
 		
+			
+		</div>
+				<div id="d2">
 		
+		<center><img class="i1" src="лабрадорит.jpg"/><center>
+		<div class="desc">
+		<h1>Лабрадорит</h1>
+		<ol>
+		<li><p>цвет:</p></li>
+		<li>структура:</li>
+		<li>текстура:</li>
+		<li>состав:</li>
+		<li>плотность:</li>
+		<li>особые свойства:</li>
+		<li>происхождение:</li>
+		<li>применение:</li>
+		</div>
 		
-		
+			
 		</div>
 	
 	</body>
