--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
 		
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
-		<title>Горные породы</title>
+		<title>Р“РѕСЂРЅС‹Рµ РїРѕСЂРѕРґС‹</title>
 		<script href="js.js"></script>
 	</head>
 
 	<body>
 		
 		<header>
-			<h1>Горные породы</h1>
+			<h1>Р“РѕСЂРЅС‹Рµ РїРѕСЂРѕРґС‹</h1>
 		</header>
 	
 		
 		<div id="d1">
 			
 			<article>	
-					<center><h3><a href="s1.html">Магматические</a></h3></center>
-					<p><img src="m1.jpg"/><img src="m2.jpg"/><a href="s1.html">Подробнее...</a></p>
+					<center><h3><a href="s1.html">РњР°РіРјР°С‚РёС‡РµСЃРєРёРµ</a></h3></center>
+					<p><img src="m1.jpg"/><img src="m2.jpg"/><a href="s1.html">РџРѕРґСЂРѕР±РЅРµРµ...</a></p>
 			</article>
 			<article>	
-					<center><h3><a href="s2.html">Осадочные</a></h3></center>
-					<p><img src="o1.png"/><img src="o2.jpg"/><a href="s2.html">Подробнее...</a></p>
+					<center><h3><a href="s2.html">РћСЃР°РґРѕС‡РЅС‹Рµ</a></h3></center>
+					<p><img src="o1.png"/><img src="o2.jpg"/><a href="s2.html">РџРѕРґСЂРѕР±РЅРµРµ...</a></p>
 			</article>
 			<article>
-				<center><h3><a href="s3.html">Метаморфические</a></h3></center>
-				<p><img src="mm1.jpg"/><img src="mm2.jpg"/><a href="s3.html">Подробнее...</a></p>
+				<center><h3><a href="s3.html">РњРµС‚Р°РјРѕСЂС„РёС‡РµСЃРєРёРµ</a></h3></center>
+				<p><img src="mm1.jpg"/><img src="mm2.jpg"/><a href="s3.html">РџРѕРґСЂРѕР±РЅРµРµ...</a></p>
 			</article>
 		</div>
 	</body>
