--- a/s1.html
+++ b/s1.html
@@ -4,46 +4,46 @@
 	<head>
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
-		<title>магматические породы</title>
+		<title>РјР°РіРјР°С‚РёС‡РµСЃРєРёРµ РїРѕСЂРѕРґС‹</title>
 	</head>
 	
 	<body>
 		<header>
-			<a id="a_1" href="index.html">назад</a><h1>магматические горные породы</h1>
+			<a id="a_1" href="index.html">РЅР°Р·Р°Рґ</a><h1>РјР°РіРјР°С‚РёС‡РµСЃРєРёРµ РіРѕСЂРЅС‹Рµ РїРѕСЂРѕРґС‹</h1>
 		</header>
 		
 		<div id="d2">
 		
-		<center><img class="i1" src="лабрадорит.jpg"/><center>
+		<center><img class="i1" src="Р»Р°Р±СЂР°РґРѕСЂРёС‚.jpg"/><center>
 		<div class="desc">
-		<h1>Лабрадорит</h1>
+		<h1>Р›Р°Р±СЂР°РґРѕСЂРёС‚</h1>
 		<ol>
-		<li><p>цвет:</p></li>
-		<li><p>структура:</p></li>
-		<li><p>текстура:</p></li>
-		<li><p>состав:</p></li>
-		<li><p>плотность:</p></li>
-		<li><p>особые свойства:</p></li>
-		<li><p>происхождение:</p></li>
-		<li><p>применение:</p></li>
+		<li><p>С†РІРµС‚:</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°:</p></li>
+		<li><p>С‚РµРєСЃС‚СѓСЂР°:</p></li>
+		<li><p>СЃРѕСЃС‚Р°РІ:</p></li>
+		<li><p>РїР»РѕС‚РЅРѕСЃС‚СЊ:</p></li>
+		<li><p>РѕСЃРѕР±С‹Рµ СЃРІРѕР№СЃС‚РІР°:</p></li>
+		<li><p>РїСЂРѕРёСЃС…РѕР¶РґРµРЅРёРµ:</p></li>
+		<li><p>РїСЂРёРјРµРЅРµРЅРёРµ:</p></li>
 		</div>
 		
 			
 		</div>
 				<div id="d2">
 		
-		<center><img class="i1" src="лабрадорит.jpg"/><center>
+		<center><img class="i1" src="Р»Р°Р±СЂР°РґРѕСЂРёС‚.jpg"/><center>
 		<div class="desc">
-		<h1>Лабрадорит</h1>
+		<h1>Р›Р°Р±СЂР°РґРѕСЂРёС‚</h1>
 		<ol>
-		<li><p>цвет:</p></li>
-		<li>структура:</li>
-		<li>текстура:</li>
-		<li>состав:</li>
-		<li>плотность:</li>
-		<li>особые свойства:</li>
-		<li>происхождение:</li>
-		<li>применение:</li>
+		<li><p>С†РІРµС‚:</p></li>
+		<li>СЃС‚СЂСѓРєС‚СѓСЂР°:</li>
+		<li>С‚РµРєСЃС‚СѓСЂР°:</li>
+		<li>СЃРѕСЃС‚Р°РІ:</li>
+		<li>РїР»РѕС‚РЅРѕСЃС‚СЊ:</li>
+		<li>РѕСЃРѕР±С‹Рµ СЃРІРѕР№СЃС‚РІР°:</li>
+		<li>РїСЂРѕРёСЃС…РѕР¶РґРµРЅРёРµ:</li>
+		<li>РїСЂРёРјРµРЅРµРЅРёРµ:</li>
 		</div>
 		
 			
