--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p><img src="m1.jpg"/><img src="m2.jpg"/><a href="s1.html">Подробнее...</a></p>
 			</article>
 			<article>	
-					<center><h3><a href="s2.html">Осадочные</a></h3></center>
+					<center><h3><a href="s2/s2.html">Осадочные</a></h3></center>
 					<p><img src="o1.png"/><img src="o2.jpg"/><a href="s2.html">Подробнее...</a></p>
 			</article>
 			<article>
