--- a/s2/s2.html
+++ b/s2/s2.html
@@ -9,7 +9,7 @@
 	
 	<body>
 		<header>
-			<a id="a_1" href="index.html">назад</a><h1>осадочные горные породы</h1>
+			<a id="a_1" href="../index.html">назад</a><h1>осадочные горные породы</h1>
 		</header>
 		
 		<div id="d2">
