--- a/s1/s1.html
+++ b/s1/s1.html
@@ -4,27 +4,27 @@
 	<head>
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
-		<title>магматические породы</title>
+		<title>РјР°РіРјР°С‚РёС‡РµСЃРєРёРµ РїРѕСЂРѕРґС‹</title>
 	</head>
 	
 	<body>
 		<header>
-			<a id="a_1" href="../index.html">назад</a><h1>магматические горные породы</h1>
+			<a id="a_1" href="../index.html">РЅР°Р·Р°Рґ</a><h1>РјР°РіРјР°С‚РёС‡РµСЃРєРёРµ РіРѕСЂРЅС‹Рµ РїРѕСЂРѕРґС‹</h1>
 		</header>
 		
 		<div id="d2">
-<center><img class="i1" src="гранит.jpg"/><center>
+<center><img class="i1" src="РіСЂР°РЅРёС‚.jpg"/><center>
 <div class="desc">
-	<h1>гранит</h1>
+	<h1>РіСЂР°РЅРёС‚</h1>
 	<ol>
-		<li><p>бледно-розовый, бордовый</p></li>
-		<li><p>полнокристаллическая разнозернистая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>кварц КПШ биотит</p></li>
-		<li><p>средняя</p></li>
+		<li><p>Р±Р»РµРґРЅРѕ-СЂРѕР·РѕРІС‹Р№, Р±РѕСЂРґРѕРІС‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ СЂР°Р·РЅРѕР·РµСЂРЅРёСЃС‚Р°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РєРІР°СЂС† РљРџРЁ Р±РёРѕС‚РёС‚</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>цвет, пятнистость</p></li>
-		<li><p>магматическое, интрузивная кислая порода</p></li>
+		<li><p>С†РІРµС‚, РїСЏС‚РЅРёСЃС‚РѕСЃС‚СЊ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ РєРёСЃР»Р°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -32,18 +32,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="риолит.jpg"/><center>
+<center><img class="i1" src="СЂРёРѕР»РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>риолит</h1>
+	<h1>СЂРёРѕР»РёС‚</h1>
 	<ol>
-		<li><p>желтоватый</p></li>
-		<li><p>порфировая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>кварц, КПШ</p></li>
-		<li><p>средняя</p></li>
+		<li><p>Р¶РµР»С‚РѕРІР°С‚С‹Р№</p></li>
+		<li><p>РїРѕСЂС„РёСЂРѕРІР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РєРІР°СЂС†, РљРџРЁ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>структура, кварц в составе</p></li>
-		<li><p>магматическое, интрузивная кислая горная порода</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°, РєРІР°СЂС† РІ СЃРѕСЃС‚Р°РІРµ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ РєРёСЃР»Р°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -51,18 +51,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="пегматит.jpg"/><center>
+<center><img class="i1" src="РїРµРіРјР°С‚РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>пегматит</h1>
+	<h1>РїРµРіРјР°С‚РёС‚</h1>
 	<ol>
-		<li><p>светло-розовый, сероватый</p></li>
-		<li><p>пегматитовая</p></li>
-		<li><p>плотная ориентированная</p></li>
-		<li><p>кварц, КПШ</p></li>
-		<li><p>средняя</p></li>
+		<li><p>СЃРІРµС‚Р»Рѕ-СЂРѕР·РѕРІС‹Р№, СЃРµСЂРѕРІР°С‚С‹Р№</p></li>
+		<li><p>РїРµРіРјР°С‚РёС‚РѕРІР°СЏ</p></li>
+		<li><p>РїР»РѕС‚РЅР°СЏ РѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РєРІР°СЂС†, РљРџРЁ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>структура, цвет, кварц в составе</p></li>
-		<li><p>магматическое, эффузивная кислая порода</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°, С†РІРµС‚, РєРІР°СЂС† РІ СЃРѕСЃС‚Р°РІРµ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, СЌС„С„СѓР·РёРІРЅР°СЏ РєРёСЃР»Р°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -70,18 +70,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="обсидиан.jpg"/><center>
+<center><img class="i1" src="РѕР±СЃРёРґРёР°РЅ.jpg"/><center>
 <div class="desc">
-	<h1>обсидиан</h1>
+	<h1>РѕР±СЃРёРґРёР°РЅ</h1>
 	<ol>
-		<li><p>черный, стеклянный блеск</p></li>
-		<li><p>стекловатая</p></li>
-		<li><p>ориентированная</p></li>
-		<li><p>невозможно определить</p></li>
-		<li><p>средняя</p></li>
+		<li><p>С‡РµСЂРЅС‹Р№, СЃС‚РµРєР»СЏРЅРЅС‹Р№ Р±Р»РµСЃРє</p></li>
+		<li><p>СЃС‚РµРєР»РѕРІР°С‚Р°СЏ</p></li>
+		<li><p>РѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РЅРµРІРѕР·РјРѕР¶РЅРѕ РѕРїСЂРµРґРµР»РёС‚СЊ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>структура, стеклянный блеск</p></li>
-		<li><p>магматическое, эффузивная порода</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°, СЃС‚РµРєР»СЏРЅРЅС‹Р№ Р±Р»РµСЃРє</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, СЌС„С„СѓР·РёРІРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -89,18 +89,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="пемза.jpg"/><center>
+<center><img class="i1" src="РїРµРјР·Р°.jpg"/><center>
 <div class="desc">
-	<h1>пемза</h1>
+	<h1>РїРµРјР·Р°</h1>
 	<ol>
-		<li><p>охристо-бежевый</p></li>
-		<li><p>стекловатая</p></li>
-		<li><p>пористая неориентированная</p></li>
-		<li><p>вулканическое стекло, SiO2</p></li>
-		<li><p>лёкгая</p></li>
-		<li><p>очень лёгкая, плавает на воле</p></li>
-		<li><p>структура, текстура, состав</p></li>
-		<li><p>магматическое, эксплозивная горная порода</p></li>
+		<li><p>РѕС…СЂРёСЃС‚Рѕ-Р±РµР¶РµРІС‹Р№</p></li>
+		<li><p>СЃС‚РµРєР»РѕРІР°С‚Р°СЏ</p></li>
+		<li><p>РїРѕСЂРёСЃС‚Р°СЏ РЅРµРѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РІСѓР»РєР°РЅРёС‡РµСЃРєРѕРµ СЃС‚РµРєР»Рѕ, SiO2</p></li>
+		<li><p>Р»С‘РєРіР°СЏ</p></li>
+		<li><p>РѕС‡РµРЅСЊ Р»С‘РіРєР°СЏ, РїР»Р°РІР°РµС‚ РЅР° РІРѕР»Рµ</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°, С‚РµРєСЃС‚СѓСЂР°, СЃРѕСЃС‚Р°РІ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, СЌРєСЃРїР»РѕР·РёРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -108,18 +108,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="туф.jpg"/><center>
+<center><img class="i1" src="С‚СѓС„.jpg"/><center>
 <div class="desc">
-	<h1>туф</h1>
+	<h1>С‚СѓС„</h1>
 	<ol>
-		<li><p>от светлых тонов, то темных и почти черных</p></li>
-		<li><p>обломочная</p></li>
-		<li><p>пористая неориентированная</p></li>
-		<li><p>вулканическое стекло, SiO2</p></li>
-		<li><p>лёкгая</p></li>
+		<li><p>РѕС‚ СЃРІРµС‚Р»С‹С… С‚РѕРЅРѕРІ, С‚Рѕ С‚РµРјРЅС‹С… Рё РїРѕС‡С‚Рё С‡РµСЂРЅС‹С…</p></li>
+		<li><p>РѕР±Р»РѕРјРѕС‡РЅР°СЏ</p></li>
+		<li><p>РїРѕСЂРёСЃС‚Р°СЏ РЅРµРѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РІСѓР»РєР°РЅРёС‡РµСЃРєРѕРµ СЃС‚РµРєР»Рѕ, SiO2</p></li>
+		<li><p>Р»С‘РєРіР°СЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>структура, текстура, состав</p></li>
-		<li><p>магматическое</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°, С‚РµРєСЃС‚СѓСЂР°, СЃРѕСЃС‚Р°РІ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -127,18 +127,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="вулканический_песок_и_пепел.jpg"/><center>
+<center><img class="i1" src="РІСѓР»РєР°РЅРёС‡РµСЃРєРёР№_РїРµСЃРѕРє_Рё_РїРµРїРµР».jpg"/><center>
 <div class="desc">
-	<h1>вулканический_песок_и_пепел</h1>
+	<h1>РІСѓР»РєР°РЅРёС‡РµСЃРєРёР№_РїРµСЃРѕРє_Рё_РїРµРїРµР»</h1>
 	<ol>
-		<li><p>желтый, серый</p></li>
-		<li><p>обломочная</p></li>
+		<li><p>Р¶РµР»С‚С‹Р№, СЃРµСЂС‹Р№</p></li>
+		<li><p>РѕР±Р»РѕРјРѕС‡РЅР°СЏ</p></li>
 		<li><p>-</p></li>
 		<li><p>-</p></li>
-		<li><p>лёгкие</p></li>
+		<li><p>Р»С‘РіРєРёРµ</p></li>
 		<li><p>-</p></li>
-		<li><p>структура</p></li>
-		<li><p>магматическое</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -146,18 +146,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="сиенит.jpg"/><center>
+<center><img class="i1" src="СЃРёРµРЅРёС‚.jpg"/><center>
 <div class="desc">
-	<h1>сиенит</h1>
+	<h1>СЃРёРµРЅРёС‚</h1>
 	<ol>
-		<li><p>розоватый, с зелеными оттенками</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>КПШ, микроклин, плагиоклаз, роговая обманка</p></li>
-		<li><p>средняя</p></li>
+		<li><p>СЂРѕР·РѕРІР°С‚С‹Р№, СЃ Р·РµР»РµРЅС‹РјРё РѕС‚С‚РµРЅРєР°РјРё</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РљРџРЁ, РјРёРєСЂРѕРєР»РёРЅ, РїР»Р°РіРёРѕРєР»Р°Р·, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>структура, текстура</p></li>
-		<li><p>магматическое, интрузивная основная горная порода</p></li>
+		<li><p>СЃС‚СЂСѓРєС‚СѓСЂР°, С‚РµРєСЃС‚СѓСЂР°</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -165,18 +165,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="трахит.jpg"/><center>
+<center><img class="i1" src="С‚СЂР°С…РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>трахит</h1>
+	<h1>С‚СЂР°С…РёС‚</h1>
 	<ol>
-		<li><p>желто-серый</p></li>
-		<li><p>порфировая</p></li>
-		<li><p>пористая неоринтированная</p></li>
-		<li><p>полевые шпаты, плагиоклаз, роговая обманка</p></li>
-		<li><p>средняя</p></li>
+		<li><p>Р¶РµР»С‚Рѕ-СЃРµСЂС‹Р№</p></li>
+		<li><p>РїРѕСЂС„РёСЂРѕРІР°СЏ</p></li>
+		<li><p>РїРѕСЂРёСЃС‚Р°СЏ РЅРµРѕСЂРёРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РїРѕР»РµРІС‹Рµ С€РїР°С‚С‹, РїР»Р°РіРёРѕРєР»Р°Р·, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>пористость, структура, цвет</p></li>
-		<li><p>магматическое, эффузивная основная горная порода</p></li>
+		<li><p>РїРѕСЂРёСЃС‚РѕСЃС‚СЊ, СЃС‚СЂСѓРєС‚СѓСЂР°, С†РІРµС‚</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, СЌС„С„СѓР·РёРІРЅР°СЏ РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -184,18 +184,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="нефелиновый_сиенит.jpg"/><center>
+<center><img class="i1" src="РЅРµС„РµР»РёРЅРѕРІС‹Р№_СЃРёРµРЅРёС‚.jpg"/><center>
 <div class="desc">
-	<h1>нефелиновый_сиенит</h1>
+	<h1>РЅРµС„РµР»РёРЅРѕРІС‹Р№_СЃРёРµРЅРёС‚</h1>
 	<ol>
-		<li><p>серый, чёрный</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>нефелин, роговая обманка, плагиоклаз</p></li>
-		<li><p>средняя</p></li>
+		<li><p>СЃРµСЂС‹Р№, С‡С‘СЂРЅС‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РЅРµС„РµР»РёРЅ, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°, РїР»Р°РіРёРѕРєР»Р°Р·</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>нет кварца в минеральном составе</p></li>
-		<li><p>магматическое, интрузивная основная горная порода</p></li>
+		<li><p>РЅРµС‚ РєРІР°СЂС†Р° РІ РјРёРЅРµСЂР°Р»СЊРЅРѕРј СЃРѕСЃС‚Р°РІРµ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -203,18 +203,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="диорит.jpg"/><center>
+<center><img class="i1" src="РґРёРѕСЂРёС‚.jpg"/><center>
 <div class="desc">
-	<h1>диорит</h1>
+	<h1>РґРёРѕСЂРёС‚</h1>
 	<ol>
-		<li><p>тёмно-зеленый</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>плагиоклаз, роговая обманка, биотит</p></li>
-		<li><p>средняя</p></li>
+		<li><p>С‚С‘РјРЅРѕ-Р·РµР»РµРЅС‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РїР»Р°РіРёРѕРєР»Р°Р·, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°, Р±РёРѕС‚РёС‚</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>цвет, минеральный состав</p></li>
-		<li><p>магматическое, интрузивная средняя горная порода</p></li>
+		<li><p>С†РІРµС‚, РјРёРЅРµСЂР°Р»СЊРЅС‹Р№ СЃРѕСЃС‚Р°РІ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ СЃСЂРµРґРЅСЏСЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -222,18 +222,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="андезит.jpg"/><center>
+<center><img class="i1" src="Р°РЅРґРµР·РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>андезит</h1>
+	<h1>Р°РЅРґРµР·РёС‚</h1>
 	<ol>
-		<li><p>темно-серый</p></li>
-		<li><p>порфировая</p></li>
-		<li><p>плотная, неориентированная</p></li>
-		<li><p>плагиоклаз, роговая обманка, биотит</p></li>
-		<li><p>средняя</p></li>
+		<li><p>С‚РµРјРЅРѕ-СЃРµСЂС‹Р№</p></li>
+		<li><p>РїРѕСЂС„РёСЂРѕРІР°СЏ</p></li>
+		<li><p>РїР»РѕС‚РЅР°СЏ, РЅРµРѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РїР»Р°РіРёРѕРєР»Р°Р·, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°, Р±РёРѕС‚РёС‚</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>цвет, минеральный состав, структура</p></li>
-		<li><p>магматическое, эффузивная средняя горная порода</p></li>
+		<li><p>С†РІРµС‚, РјРёРЅРµСЂР°Р»СЊРЅС‹Р№ СЃРѕСЃС‚Р°РІ, СЃС‚СЂСѓРєС‚СѓСЂР°</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, СЌС„С„СѓР·РёРІРЅР°СЏ СЃСЂРµРґРЅСЏСЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -241,18 +241,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="габбро.jpg"/><center>
+<center><img class="i1" src="РіР°Р±Р±СЂРѕ.jpg"/><center>
 <div class="desc">
-	<h1>габбро</h1>
+	<h1>РіР°Р±Р±СЂРѕ</h1>
 	<ol>
-		<li><p>серо-черный</p></li>
-		<li><p>полнокристаллическая, мелкозернистая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>плагиоклаз, пироксен</p></li>
-		<li><p>средняя</p></li>
+		<li><p>СЃРµСЂРѕ-С‡РµСЂРЅС‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ, РјРµР»РєРѕР·РµСЂРЅРёСЃС‚Р°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РїР»Р°РіРёРѕРєР»Р°Р·, РїРёСЂРѕРєСЃРµРЅ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>темный цвет, структура</p></li>
-		<li><p>магматическое, интрузивная основная горная порода</p></li>
+		<li><p>С‚РµРјРЅС‹Р№ С†РІРµС‚, СЃС‚СЂСѓРєС‚СѓСЂР°</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -260,18 +260,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="лабрадорит.jpg"/><center>
+<center><img class="i1" src="Р»Р°Р±СЂР°РґРѕСЂРёС‚.jpg"/><center>
 <div class="desc">
-	<h1>лабрадорит</h1>
+	<h1>Р»Р°Р±СЂР°РґРѕСЂРёС‚</h1>
 	<ol>
-		<li><p>чёрный</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>лабрадор</p></li>
-		<li><p>средняя</p></li>
-		<li><p>иризация синим цветом</p></li>
-		<li><p>иризация</p></li>
-		<li><p>магматическое, интрузивная основная горная порода</p></li>
+		<li><p>С‡С‘СЂРЅС‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>Р»Р°Р±СЂР°РґРѕСЂ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>РёСЂРёР·Р°С†РёСЏ СЃРёРЅРёРј С†РІРµС‚РѕРј</p></li>
+		<li><p>РёСЂРёР·Р°С†РёСЏ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -279,37 +279,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="базальт.jpg"/><center>
+<center><img class="i1" src="Р±Р°Р·Р°Р»СЊС‚.jpg"/><center>
 <div class="desc">
-	<h1>базальт</h1>
+	<h1>Р±Р°Р·Р°Р»СЊС‚</h1>
 	<ol>
-		<li><p>чёрный, темно-коричневый</p></li>
-		<li><p>порфировая или стекловатая</p></li>
-		<li><p>плотная или пористая, неориентированная</p></li>
-		<li><p>плагиоклаз, пироксен, при стекловатой структуре невозможно определить</p></li>
-		<li><p>средняя</p></li>
+		<li><p>С‡С‘СЂРЅС‹Р№, С‚РµРјРЅРѕ-РєРѕСЂРёС‡РЅРµРІС‹Р№</p></li>
+		<li><p>РїРѕСЂС„РёСЂРѕРІР°СЏ РёР»Рё СЃС‚РµРєР»РѕРІР°С‚Р°СЏ</p></li>
+		<li><p>РїР»РѕС‚РЅР°СЏ РёР»Рё РїРѕСЂРёСЃС‚Р°СЏ, РЅРµРѕСЂРёРµРЅС‚РёСЂРѕРІР°РЅРЅР°СЏ</p></li>
+		<li><p>РїР»Р°РіРёРѕРєР»Р°Р·, РїРёСЂРѕРєСЃРµРЅ, РїСЂРё СЃС‚РµРєР»РѕРІР°С‚РѕР№ СЃС‚СЂСѓРєС‚СѓСЂРµ РЅРµРІРѕР·РјРѕР¶РЅРѕ РѕРїСЂРµРґРµР»РёС‚СЊ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
 		<li><p>-</p></li>
-		<li><p>тёмный цвет, структура, пористость</p></li>
-		<li><p>магматическое, эффузивная основная горная порода</p></li>
-		<li><p>-</p></li>
-	</ol>
-</div>
-</div>
-
-
-<div id="d2">
-<center><img class="i1" src="пироксенит.jpg"/><center>
-<div class="desc">
-	<h1>пироксенит</h1>
-	<ol>
-		<li><p>от серого до черного, черно-зеленый, блестит</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>пироксен, оливин, роговая обманка</p></li>
-		<li><p>средняя</p></li>
-		<li><p>отсутствие кварца в составе</p></li>
-		<li><p>минеральый состав, тёмный цвет</p></li>
-		<li><p>магматическое, интрузивная ульраосновная горная порода</p></li>
+		<li><p>С‚С‘РјРЅС‹Р№ С†РІРµС‚, СЃС‚СЂСѓРєС‚СѓСЂР°, РїРѕСЂРёСЃС‚РѕСЃС‚СЊ</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, СЌС„С„СѓР·РёРІРЅР°СЏ РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -317,18 +298,18 @@
 
 
 <div id="d2">
-<center><img class="i1" src="перидотит.jpg"/><center>
+<center><img class="i1" src="РїРёСЂРѕРєСЃРµРЅРёС‚.jpg"/><center>
 <div class="desc">
-	<h1>перидотит</h1>
+	<h1>РїРёСЂРѕРєСЃРµРЅРёС‚</h1>
 	<ol>
-		<li><p>черный, немного зеленоватый, не блестит</p></li>
-		<li><p>полнокристаллическая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>пироксены, оливин</p></li>
-		<li><p>средняя</p></li>
-		<li><p>слегка шершавый</p></li>
-		<li><p>цвет</p></li>
-		<li><p>магматическое, интрузивная ультраосновная горная порода</p></li>
+		<li><p>РѕС‚ СЃРµСЂРѕРіРѕ РґРѕ С‡РµСЂРЅРѕРіРѕ, С‡РµСЂРЅРѕ-Р·РµР»РµРЅС‹Р№, Р±Р»РµСЃС‚РёС‚</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РїРёСЂРѕРєСЃРµРЅ, РѕР»РёРІРёРЅ, СЂРѕРіРѕРІР°СЏ РѕР±РјР°РЅРєР°</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>РѕС‚СЃСѓС‚СЃС‚РІРёРµ РєРІР°СЂС†Р° РІ СЃРѕСЃС‚Р°РІРµ</p></li>
+		<li><p>РјРёРЅРµСЂР°Р»СЊС‹Р№ СЃРѕСЃС‚Р°РІ, С‚С‘РјРЅС‹Р№ С†РІРµС‚</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ СѓР»СЊСЂР°РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
@@ -336,18 +317,37 @@
 
 
 <div id="d2">
-<center><img class="i1" src="дунит.jpg"/><center>
+<center><img class="i1" src="РїРµСЂРёРґРѕС‚РёС‚.jpg"/><center>
 <div class="desc">
-	<h1>дунит</h1>
+	<h1>РїРµСЂРёРґРѕС‚РёС‚</h1>
 	<ol>
-		<li><p>черно-коричневый</p></li>
-		<li><p>полнокристаллическая, мелкозернистая</p></li>
-		<li><p>массивная</p></li>
-		<li><p>оливин, немного пироксена</p></li>
-		<li><p>средняя</p></li>
-		<li><p>образуется коричневый слой часто</p></li>
-		<li><p>состав, особые свойства</p></li>
-		<li><p>магматическое, интрузивная ультраосновная горная порода</p></li>
+		<li><p>С‡РµСЂРЅС‹Р№, РЅРµРјРЅРѕРіРѕ Р·РµР»РµРЅРѕРІР°С‚С‹Р№, РЅРµ Р±Р»РµСЃС‚РёС‚</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РїРёСЂРѕРєСЃРµРЅС‹, РѕР»РёРІРёРЅ</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>СЃР»РµРіРєР° С€РµСЂС€Р°РІС‹Р№</p></li>
+		<li><p>С†РІРµС‚</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ СѓР»СЊС‚СЂР°РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
+		<li><p>-</p></li>
+	</ol>
+</div>
+</div>
+
+
+<div id="d2">
+<center><img class="i1" src="РґСѓРЅРёС‚.jpg"/><center>
+<div class="desc">
+	<h1>РґСѓРЅРёС‚</h1>
+	<ol>
+		<li><p>С‡РµСЂРЅРѕ-РєРѕСЂРёС‡РЅРµРІС‹Р№</p></li>
+		<li><p>РїРѕР»РЅРѕРєСЂРёСЃС‚Р°Р»Р»РёС‡РµСЃРєР°СЏ, РјРµР»РєРѕР·РµСЂРЅРёСЃС‚Р°СЏ</p></li>
+		<li><p>РјР°СЃСЃРёРІРЅР°СЏ</p></li>
+		<li><p>РѕР»РёРІРёРЅ, РЅРµРјРЅРѕРіРѕ РїРёСЂРѕРєСЃРµРЅР°</p></li>
+		<li><p>СЃСЂРµРґРЅСЏСЏ</p></li>
+		<li><p>РѕР±СЂР°Р·СѓРµС‚СЃСЏ РєРѕСЂРёС‡РЅРµРІС‹Р№ СЃР»РѕР№ С‡Р°СЃС‚Рѕ</p></li>
+		<li><p>СЃРѕСЃС‚Р°РІ, РѕСЃРѕР±С‹Рµ СЃРІРѕР№СЃС‚РІР°</p></li>
+		<li><p>РјР°РіРјР°С‚РёС‡РµСЃРєРѕРµ, РёРЅС‚СЂСѓР·РёРІРЅР°СЏ СѓР»СЊС‚СЂР°РѕСЃРЅРѕРІРЅР°СЏ РіРѕСЂРЅР°СЏ РїРѕСЂРѕРґР°</p></li>
 		<li><p>-</p></li>
 	</ol>
 </div>
