--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
+		<link rel="icon" href="путь_к_иконке/favicon.ico" type="image/x-icon">
 		<title>Горные породы</title>
 		<script href="js.js"></script>
 	</head>
@@ -20,15 +21,15 @@
 			
 			<article>	
 					<center><h3><a href="s1/s1.html">Магматические</a></h3></center>
-					<p><img src="m1.jpg"/><img src="m2.jpg"/><a href="s1/s1.html">Подробнее...</a></p>
+					<p><img src="m1.jpg"/><img src="m2.jpg"/><a href="s1.html">Подробнее...</a></p>
 			</article>
 			<article>	
 					<center><h3><a href="s2/s2.html">Осадочные</a></h3></center>
-					<p><img src="o1.png"/><img src="o2.jpg"/><a href="s2/s2.html">Подробнее...</a></p>
+					<p><img src="o1.png"/><img src="o2.jpg"/><a href="s2.html">Подробнее...</a></p>
 			</article>
 			<article>
 				<center><h3><a href="s3/s3.html">Метаморфические</a></h3></center>
-				<p><img src="mm1.jpg"/><img src="mm2.jpg"/><a href="s3/s3.html">Подробнее...</a></p>
+				<p><img src="mm1.jpg"/><img src="mm2.jpg"/><a href="s3.html">Подробнее...</a></p>
 			</article>
 		</div>
 	</body>
