--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 				<center><h3><a href="s3/s3.html">Метаморфические</a></h3></center>
 				<p><img src="mm1.jpg"/><img src="mm2.jpg"/><a href="s3.html">Подробнее...</a></p>
 			</article>
+			<article>
+				<center><h3><a href="test.html">Тест по горным породам</a></h3></center>
+			</article>
 		</div>
 	</body>
 
