--- a/test.html
+++ b/test.html
@@ -45,6 +45,12 @@
 		if(R3 == In[3].value)mark_ ++;
 		if(R4 == In[4].value)mark_ ++;
 		document.getElementById("M").innerHTML = ("your mark is: " + mark_);
+		
+		document.getElementById("N0").innerHTML = R0;
+		document.getElementById("N1").innerHTML = R1;
+		document.getElementById("N2").innerHTML = R2;
+		document.getElementById("N3").innerHTML = R3;
+		document.getElementById("N4").innerHTML = R4;
 		}
 
 
@@ -64,7 +70,7 @@
 		
 		<div id="d1">
 			<article>	
-					<center><h3 id="N1"></h3></center>
+					<center><h3 id="N0"></h3></center>
 					<p><img id="img1" src="box.jpg"/></p>
 					<form>
 						<input class="in" id="in1" type = "text" size="40">
@@ -72,7 +78,7 @@
 					</form>
 			</article>
 			<article>	
-					<center><h3 id="N2"></h3></center>
+					<center><h3 id="N1"></h3></center>
 					<p><img id="img2" src="box.jpg"/></p>
 					<form>
 						<input class="in" id="in2" type = "text" size="40">
@@ -80,7 +86,7 @@
 					</form>
 			</article>
 			<article>	
-					<center><h3 id="N3"></h3></center>
+					<center><h3 id="N2"></h3></center>
 					<p><img id="img3" src="box.jpg"/></p>
 					<form>
 						<input class="in" id="in3" type = "text" size="40">
@@ -88,7 +94,7 @@
 					</form>
 			</article>
 			<article>	
-					<center><h3 id="N4"></h3></center>
+					<center><h3 id="N3"></h3></center>
 					<p><img id="img4" src="box.jpg"/></p>
 					<form>
 						<input class="in" id="in4" type = "text" size="40">
@@ -96,7 +102,7 @@
 					</form>
 			</article>
 			<article>	
-					<center><h3 id="N5"></h3></center>
+					<center><h3 id="N4"></h3></center>
 					<p><img id="img5" src="box.jpg"/></p>
 					<form>
 						<input class="in" id="in5" type = "text" size="40">
