--- a/test.html
+++ b/test.html
@@ -51,6 +51,8 @@
 		document.getElementById("N2").innerHTML = R2;
 		document.getElementById("N3").innerHTML = R3;
 		document.getElementById("N4").innerHTML = R4;
+		
+		mark_ = 0;
 		}
 
 
