--- a/b.html
+++ b/b.html
@@ -5,7 +5,7 @@
 		
 		<meta http-equiv="Content-Tipe" content="text/html; charset=UTF-8"/>
 		<link href="b.css" rel="stylesheet" type="text/css"/>
-		<link rel="icon" href="путь_к_иконке/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<title></title>
 		<script type="text/javascript" src="b.js"></script>
 		<script type="text/javascript">
@@ -19,7 +19,7 @@
 			b.style.height='280px';
 			b.style.width='280px';
 			t();
-		if(pass ==p){location.href='balandin.html';}
+		if(pass == p){location.href='balandin.html';}
 		else location.href='a.html';
 		}
 		
